--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,20 +16,18 @@
 
 <body>
   <div class="site-wrapper">
-<header>
-  <nav>
-    <a href="#">Services</a>
-    <a href="#">Product</a>
-    <a href="#">Vision</a>
-    <a href="#">Features</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
-  
-  
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  
-</header>
+
+    <nav class="navbar">
+      <a href="#">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      
+      <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+      
+      </nav>
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
