--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -29,14 +29,16 @@
       
       </nav>
 
-
+<header>
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
+<div class=services>
 <h2>Services</h2>
 
 <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+</div>
+</header>
 
-
+<div class="content-parent">
 <h2>Digital Design</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -89,6 +91,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 <button>Learn More</button>
 
+<div bottom>
+
+</div>
 
 <h2>Some Facts About Our Services</h2>
 
@@ -104,8 +109,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+</div>
 <footer>
-    <span>Copyright Great Idea! 2018</span>
+    <p>Copyright Great Idea! 2018</p>
 </footer>
 
 </div>
