--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,7 +21,7 @@
 <header>
 
     <nav class="navbar">
-      <a href="#">Services</a>
+      <a href="services.html">Services</a>
       <a href="#">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
@@ -33,12 +33,14 @@
       </nav>
 </header>
  
-<div class="container">
+
 <section class="home">
-  <div class="home-child">
-    <h1>Innovation
-        On
-        Demand</h1> 
+  <div class="home-child1">
+    <h1>Innovation</h1>
+        <h1>
+            On
+        </h1>
+        <h1>Demand</h1> 
     <button>Get Started</button>
   </div>
     
@@ -94,7 +96,7 @@
       <p>Copyright Great Idea! 2018</p>
 </footer>
 
-</div>
+
 </div>
   </body>
 </html>
