--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -53,40 +53,43 @@
 <section class="main">
 
 <div class="top-content">
-  <div class="features">
+  <div class="text-top">
     <h2>Features</h2>
   
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </div>
 
-  <div class="about">
+  <div class="text-top">
     <h2>About</h2>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </div>
 </div>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
- <div class="services">
-  <h2>Services</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
- </div> 
 
-<div class="product">
-  <h2>Product</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-</div>
-
-<div class="vision">
-  <h2>Vision</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-</div>
+<div class="bottom-content">
+    <div class="text-bottom">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+       </div> 
+      
+      <div class="text-bottom">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      
+      <div class="text-bottom">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+</div>  
 </section>
 
 <div class="contact">
       <h2>Contact</h2>
     <address>
-        <p>123 Way 456 Street
-            Somewhere, USA</p>
+        <p>123 Way 456 Street</p>
+            <p>Somewhere, USA</p>
         <a href="#">1 (888) 888-8888</a><br>
         <a href="#">sales@greatidea.io</a>
     </address>
