mvp but for small format tweaks

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -91,7 +91,7 @@
         <p>123 Way 456 Street</p>
             <p>Somewhere, USA</p>
         <a href="#">1 (888) 888-8888</a><br>
-        <a href="#">sales@greatidea.io</a>
+        <a href="#">sales@greatidea.io</a><br>
     </address>
 </div>
 
